# daly-battery-logger

./: .gitignore  CLAUDE.md  README.md  devices.json  main.py  notification_settings.json  pyproject.toml  to-dos.md  web_server.py
dalybms/: pyproject.toml
dalybms/dalybms/: daly_bms_bluetooth.py
src/daly_logger/: bms_worker.py  data_logger.py  gui_app.py  notification_settings.py  ros2_bridge.py  sound_manager.py  web_server.py
src/daly_logger/static/: index.html
