[project]
name = "daly-logger"
version = "0.2.0"
description = "Daly BMS monitor and data logger"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleak>=3.0.2",
    "dalybms",
    "pyserial==3.5",
    "PyQt5>=5.15",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyqtgraph>=0.13",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "piper-tts>=1.2.0",
]

# rclpy is NOT pip-installable; install via system packages / rosdep:
#   sudo apt install ros-<distro>-rclpy ros-<distro>-sensor-msgs
[project.optional-dependencies]
ros2 = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daly_logger"]

[tool.uv.sources]
dalybms = { git = "https://github.com/Armmy2530/python-daly-bms.git" }
